fix scroll behavior and overflow, all anchors and scroll snapping working withit errors

--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,10 @@
     scroll-behavior: smooth;
 }
 
-body {
-    overflow-y: hidden;
-}
-
 .scroll-container {
-    height: 100vh;
+    height: 90vh;
     overflow-y: scroll;
-    scroll-snap-type: y proximity;
+    scroll-snap-type: y mandatory;
 }
 
 section {
