--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,7 +1,8 @@
 .navbar {
+    height: 10vh;
+    width: 100vw;
     position: sticky;
     top: 0;
-    height: 10%;
     padding: 10px 30px 10px 30px;
     display: flex;
     justify-content: space-between;
